# game

./: .env_dist  .gitignore  .pre-commit-config.yaml  README.md  eslint.config.js  index.html  package-lock.json  package.json  pyproject.toml
alembic/: script.py.mako
alembic/versions/: 2f0c506f2550_migrations.py  init.py
app/: __init__.py  api.py  app.py  authorization.py  exc.py  game_manager.py  jwt_token.py  metadata.py  password.py  redis_accessor.py  tasks.py  websocket_manager.py
app/core/: depends.py  exception_handlers.py  lifespan.py  middleware.py  routes.py  settings.py
app/enums/: __init__.py  event_type.py
app/orm/: __init__.py  game_stat.py  user.py
app/orm/core/: __init__.py  model.py  types.py
app/schemas/: __init__.py  event.py  field.py  game.py  player.py  schema.py
docker/: Dockerfile
docker/compose/: alembic.yml  app.yml  database.yml  networks.yml  redis.yml
src/: App.vue  api.ts  main.ts  router.ts  vite-env.d.ts
src/components/: AuthCard.vue  AuthFooter.vue  AuthForm.vue  AuthInput.vue  GameColorSelection.vue  GameLobby.vue  GameOver.vue  GameScreen.vue  GameStats.vue
src/enums/: eventType.ts  gameState.ts
src/pages/: Game.vue  Login.vue  Register.vue
src/styles/: styles.css
